--- a/LiveDataSample/versions.gradle
+++ b/LiveDataSample/versions.gradle
@@ -79,6 +79,7 @@ activity.activity_ktx = "androidx.activity:activity-ktx:$versions.activity"
 deps.activity = activity
 
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+deps.logging_live_data = "io.github.chao2zhang.logginglivedata:logginglivedata:0.0.1"
 
 deps.annotations = "androidx.annotation:annotation:$versions.annotations"
 
@@ -217,10 +218,3 @@ work.runtime_ktx = "androidx.work:work-runtime-ktx:$versions.work"
 deps.work = work
 
 ext.deps = deps
-
-def addRepos(RepositoryHandler handler) {
-    handler.google()
-    handler.jcenter()
-    handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-}
-ext.addRepos = this.&addRepos
