--- a/LiveDataSample/app/build.gradle
+++ b/LiveDataSample/app/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.github.chao2zhang.logginglivedata'
 
 android {
     compileSdkVersion build_versions.compile_sdk
